unpackaged/main/default/objects/API_Connector__Criteria_Base_Setting__mdt/API_Connector__Criteria_Base_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Criteria Base Setting</label>
    <pluralLabel>Criteria Base Settings</pluralLabel>
</CustomObject>