unpackaged/main/default/objects/API_Connector__Criteria_Base_Setting__mdt/fields/API_Connector__Custom_Logic__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Custom_Logic__c</fullName>
    <label>Custom Logic</label>
    <type>TextArea</type>
</CustomField>