unpackaged/main/default/objects/API_Connector__Criteria_Base_Setting__mdt/fields/API_Connector__Filter_logic__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Filter_logic__c</fullName>
    <label>Filter logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>