unpackaged/main/default/objects/API_Connector__Criteria_Base_Setting__mdt/fields/API_Connector__Value2__c.field-meta.xml
<CustomField>
    <fullName>API_Connector__Value2__c</fullName>
    <label>Value2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>